# eventnow-server

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
eventnow_app/: README.md  pubspec.yaml
eventnow_app/android/app/: build.gradle
eventnow_app/android/app/src/debug/: AndroidManifest.xml
eventnow_app/android/app/src/main/: AndroidManifest.xml
eventnow_app/android/app/src/main/kotlin/com/example/eventnow_app/: MainActivity.kt
eventnow_app/ios/Runner/: Info.plist
eventnow_app/ios/Runner.xcodeproj/: project.pbxproj
eventnow_app/lib/: main.dart
eventnow_app/lib/Widgets/: FormCard.dart
eventnow_app/test/: widget_test.dart
migrations/2019-11-05-231539_create_group/: down.sql  up.sql
migrations/2019-11-06-053820_create_event/: up.sql
migrations/2019-11-06-060302_create_user/: up.sql
migrations/2019-11-06-060704_create_post/: up.sql
migrations/2019-11-06-061719_create_membership/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
