[package]
name = "eventnow-server"
version = "0.1.0"
authors = ["David Cao <david@cao.st>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
env_logger = "0.7"
r2d2 = "0.8"
dotenv = "0.9.0"
serde = "1"
